--- a/index.css
+++ b/index.css
@@ -6,7 +6,9 @@
   padding: 0;
   margin: 0;
 }
-
+.container {
+  height: 1000px;
+}
 .navigation {
   height: 100px;
   width: 100%;
@@ -17,7 +19,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index:10;
+  z-index: 10;
 }
 
 .logo {
@@ -70,14 +72,40 @@
 }
 
 .big-cirlce {
-    width: 100%;
-    height: 800px;
-    position: relative;
-    top: 200px;
+  width: 100%;
+  height: 1000px;
+  position: relative;
+  top: 300px;
 }
 
 .img-text {
-    position: relative;
-    z-index: 1;
-    top: 20px;
+  position: relative;
+  z-index: 1;
+  top: 108px;
+}
+.girl-img, .message {
+  position: absolute;
+  z-index: 2;
+  top: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.message {
+  top: 700px;
+}
+
+@media screen and (max-width:768px) {
+  .girl-img{
+    top: 142px;
+  }
+  .message {
+    top: 400px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .girl-img{
+    top: 135px;
+  }
 }
