--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 100;
 }
 
 .logo {
@@ -83,7 +83,7 @@
   z-index: 1;
   top: 108px;
 }
-.girl-img, .message {
+.girl-img {
   position: absolute;
   z-index: 2;
   top: 200px;
@@ -91,21 +91,32 @@
   transform: translateX(-50%);
 }
 
-.message {
-  top: 700px;
+
+.caption {
+  z-index: 30;
+  position: relative;
+  top: 150px;
+  width:400px;
+  margin: auto;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
 }
 
+.mail-box{
+  background-color: red;
+  height: 300px;
+  z-index: 40;
+}
 @media screen and (max-width:768px) {
   .girl-img{
     top: 142px;
   }
-  .message {
-    top: 400px;
-  }
+ 
 }
 
 @media screen and (max-width: 640px) {
   .girl-img{
     top: 135px;
   }
-}
+  
+} 
